@@ -1,5 +1,4 @@
 
 
 1. Now run your application with "script/server"
-2. And visit "http://localhost:3000" to see what has been created
-
+2. Vist "http://localhost:3000" to install your app in a shop
