@@ -1,6 +1,6 @@
 <div id="sidebar">
   <h3>Where to start</h3>
-  <h4>Check out the <code style="font-size: 140%">dashboard_controller</code></h4>
+  <h4>Check out the <code style="font-size: 140%">home_controller</code></h4>
 
   <p class="description">
     The controller in this demo application fetches the latest 3 orders and products and makes them available as instance variables <code style="color: #218BCE">@orders</code> and <code style="color: #218BCE">@products</code>.
@@ -12,7 +12,7 @@
     This is the Ruby template you are currently looking at. It is located at:<br />  
   </p>
 
-  <p style="background: #fff; margin-left: 4px"><code>views/dashboard/index.html.erb</code></p>
+  <p style="background: #fff; margin-left: 4px"><code>views/home/index.html.erb</code></p>
 
   <p class="description">
     Have a look at the markup and Ruby code to see how the Shopify API is being used.
