@@ -1,15 +1,15 @@
-<h1>Login</h1>
+<h1>Install</h1>
 
-<p>
-  First you have to register this app with a shop to allow access to its private admin data.
-</p>
+<p>Install this app in a shop to get access to its private admin data.</p>
+
+<p style="padding-bottom: 1em"><span class="hint">Don&rsquo;t have a shop to install your app in handy? <a href="https://app.shopify.com/services/partners/api_clients/test_shops">Create a test shop.</a></span></p>
 
 <% form_tag '/login/authenticate' do %>
   <label for='shop'><strong>The URL of the Shop</strong>
-    <span class="hint">(or just the subdomain if it's at myshopify.com)</span>
+    <span class="hint">(or just the subdomain if it&rsquo;s at myshopify.com)</span>
   </label>
   <p>
-    <%= text_field_tag 'shop' %>
+    <%= text_field_tag 'shop', {}, {:size => 45} %>
+    <%= submit_tag 'Install' %>
   </p>
-  <%= submit_tag 'Authenticate' %>
 <% end %>
