@@ -1,10 +1,15 @@
 puts
-puts "Shopify App generator"
+puts "Shopify App Generator"
 puts "---------------------"
 puts
-puts "Before you set can get started, you need to register your application with the Shopify Partner UI."
+puts "To get started, first register your app as a Shopify Partner:"
 puts
-puts " * Go to http://www.shopify.com/partners and create or login your partner account. Before you get started with your Shopify app you need to "
-puts " * Register your application on the Application tab. Use http://localhost:3000/login/finalize as redirect URL during development." 
-puts " * run ./script/generate shopify_app <api_key> <secret>"
+puts " * Go to http://www.shopify.com/partners and create or login to your Partner account."
+puts " * Jump over to the Apps tab and hit the “Create a new app button”"
+puts "   (Make sure to set the Return URL to http://localhost:3000/login/finalize during development)"
+puts " * Install the Shopify API gem. Run sudo gem install shopify_api"
+puts " * Run ./script/generate shopify_app <api_key> <secret>"
+puts " * Set up a test shop to install your app in (do this on the Partner site)"
+puts " * Run ./script/server"
+puts " * Visit http://localhost:3000 and use the test shop’s URL to install this app"
 puts
