@@ -4,13 +4,13 @@ module ShopifyLoginProtection
     if session[:shopify]
       begin
         # session[:shopify] set in LoginController#finalize
-        ActiveResource::Base.site = session[:shopify].site
+        ShopifyAPI::Base.site = session[:shopify].site
         yield
       ensure 
-        ActiveResource::Base.site = nil
+        ShopifyAPI::Base.site = nil
       end
     else            
-      session[:return_to] = request.path
+      session[:return_to] = request.request_uri
       redirect_to :controller => 'login'      
     end
   end
